@@ -121,7 +121,7 @@ class MockClient:
         self.deferred = None
         self.raise_if_packet = None
         self.type = None
-        self.tables = []
+        self.tables = {}
         self.packets = []
 
     def __str__(self):
@@ -157,10 +157,8 @@ class MockClient:
     # with what the pokertable API expects.
 
     def removePlayer(self, table, serial):
-        if self.tables.count(table) != 1:
-            self.error(table + " does not occur exactly once for this player.")
-        self.tables.remove(table)
-
+        if not self.tables.has_key(table.game.id):
+            self.error("Table with game number %d does not occur exactly once for this player." % table.game.id)
         return table.game.removePlayer(serial)
 
     def autoBlindAnte(self, table, serial, auto):
@@ -170,7 +168,7 @@ class MockClient:
         table.game.sit(serial)
 
     def addPlayer(self, table, seat):
-        self.tables.append(table)
+        self.tables[table.game.id] = table
         if table.game.addPlayer(self.serial, seat):
             player = table.game.getPlayer(self.serial)
             player.setUserData(DEFAULT_PLAYER_USER_DATA.copy())
@@ -202,7 +200,21 @@ class MockClient:
 
     def getPlayerInfo(self):
         return "Name: " + self.getName() + ", Serial: %d" % self.getSerial()
+# --------------------------------------------------------------------------------
+class MockClientWithTableDict(MockClient):
+    def __init__(self, serial):
+        self.tables = {}
+        MockClient.__init__(self, serial)
 
+    def addPlayer(self, table, seat):
+        MockClient.addPlayer(self, table, seat)
+        self.tables[table.game.id] = seat
+
+# --------------------------------------------------------------------------------
+class MockClientWithRemoveTable(MockClient):
+    def removeTable(self, gameId):
+        return True
+# --------------------------------------------------------------------------------
 class PokerTableTestCase(unittest.TestCase):
     # -------------------------------------------------------------------
     def setUp(self, settingsXmlStr=settings_xml):
@@ -225,8 +237,8 @@ class PokerTableTestCase(unittest.TestCase):
         self.table.cancelPlayerTimers()
         del self.table
 
-    def createPlayer(self, serial, buySit=True):
-        client = MockClient(serial)
+    def createPlayer(self, serial, buySit=True, clientClass=MockClient):
+        client = clientClass(serial)
         self.clients[serial] = client
         self.table.joinPlayer(client, serial)
         if buySit:
@@ -412,10 +424,19 @@ class PokerTableTestCase(unittest.TestCase):
     # -------------------------------------------------------------------
     def test13_disconnect(self):
         """Test a disconnected player"""
-        p1 = self.createPlayer(1)
-        # I think this test should actually work; I don't think that
-        #  pokertable.destory 
-#        self.table.disconnectPlayer(p1, 1)
+        p1 = self.createPlayer(1, clientClass=MockClientWithTableDict)
+        self.table.disconnectPlayer(p1, 1)
+    # -------------------------------------------------------------------
+    def test13altForNewClientAPI_disconnect(self):
+        """Test player disconnection once the client API has a removeTable method
+           This is currently turned off because the change has not been
+           made.  See the FIXME around line 1218 of pokertable.py in
+           pokertable.destroyPlayer
+        """
+        # This is disabled until the API changes
+        return True
+        p1 = self.createPlayer(1, clientClass=MockClientWithRemoveTable)
+        self.table.disconnectPlayer(p1, 1)
     # -------------------------------------------------------------------
     def test14_closed_games(self):
         """Do typical operations act as expected when the game is closed?"""
@@ -429,7 +450,6 @@ class PokerTableTestCase(unittest.TestCase):
         # to leave, we wait for the error packet to come back, and make
         # sure that they other_type indicates it's a response to our leave
         # request.
-
         deferredLeaveErrorWait = player[2].waitFor(PACKET_POKER_ERROR)
         def checkReturnPacket(packet):
             self.assertEqual(PACKET_POKER_PLAYER_LEAVE, packet.other_type)
@@ -439,11 +459,25 @@ class PokerTableTestCase(unittest.TestCase):
         self.table.leavePlayer(player[2], 2)
         return deferredLeaveErrorWait
 
-        #  Leave players should get packets that mentions forbidding leaving
     # -------------------------------------------------------------------
     def test99_destroy_table(self):
         """Test table destruction"""
+        p1 = self.createPlayer(1, clientClass=MockClientWithTableDict)
+        d = p1.waitFor(PACKET_POKER_TABLE_DESTROY)
         self.table.destroy()
+        return d
+    # -------------------------------------------------------------------
+    def test99altForNewClientAPI_destroy_table(self):
+        """Test table destruction once the client API has a removeTable method
+           This is currently turned off because the change has not been made.
+           See the FIXME around line 117 of pokertable.py in pokertable.destroy
+        """
+        # This is disabled until the API changes
+        return True
+        p1 = self.createPlayer(1, clientClass=MockClientWithRemoveTable)
+        d = p1.waitFor(PACKET_POKER_TABLE_DESTROY)
+        self.table.destroy()
+        return d
 # -------------------------------------------------------------------
 
 # I seriously considered not having *all* the same tests run with
